基于 express 搭建一个中转服务器，解决了 metabase 直接作为服务器的跨域问题

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Metabase",
+  "name": "metabase",
   "version": "1.0.0",
   "description": "基于 metabase 的一系列玩法",
   "main": "index.js",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/0idream/Metabase#readme",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5"
   }
 }
